Working on changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 .vs/final-project-whiterichterwhite/v16/Server/sqlite3/db.lock
+Temp/UnityLockfile
+Temp/UnityTempFile-86b5bd3812565b84584fe8203216cc7b
+Temp/UnityTempFile-aea46fef55568e94e88a45e452e1b9b9
