--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\InventoryScripts\InventoryItem.cs" />
     <Compile Include="Assets\Scripts\InventoryScripts\InventoryManager.cs" />
     <Compile Include="Assets\Scripts\InventoryScripts\InventorySlot.cs" />
+    <Compile Include="Assets\Scripts\InventoryScripts\PhysicalItemInventory.cs" />
     <Compile Include="Assets\Scripts\InventoryScripts\PlayerInventory.cs" />
     <Compile Include="Assets\Scripts\Key.cs" />
     <Compile Include="Assets\Scripts\Knockback.cs" />
