Just modified first scene added a door,

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\pot.cs" />
     <Compile Include="Assets\Scripts\RoomMove.cs" />
+    <Compile Include="Assets\Scripts\SceneTransition.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\FloatValue.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\PlayerVector.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
